# upc-checker

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
doc/: search-index.js  settings.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Send.js  trait.Sync.js
doc/lib/: all.html  index.html  sidebar-items.js  struct.UPCCode.html
doc/src/lib/: lib.rs.html
src/: lib-old.rs  lib.rs
tests/: overflow_check_digit.rs  overflow_upc.rs  valid_upc.rs  valid_upc_check.rs
